--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Daniel Tech Blog"
-title_separator          : "Daniel | Tech"
+title                    : "Daniel Tech Web"
+title_separator          : "-"
 name                     : "Daniel Zhang"
-description              : "Daniel Tech Blog"
-url                      : url: "https://danielblog.ml" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "I Love Python"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -63,11 +63,11 @@ google_ad_slot           :
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
+  name             : "Daniel Zhang"
+  avatar           : "headicon.png"
+  bio              : "Backend Developer"
   location         : "Somewhere"
-  email            :
+  email            : "danielpark139@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
@@ -75,7 +75,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : "https://github.com/Baniel"
   google_plus      :
   keybase          :
   instagram        :
@@ -151,7 +151,7 @@ kramdown:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Australia/Melbourne # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
