--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
-  - title: "Sample Navigation Link"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/navigation/
+#  - title: "Jekyll Theme Tutorial"
+#    url: https://mmistakes.github.io/minimal-mistakes/docs/navigation/
 
-  - title: "Sample Navigation Link 2"
+  - title: "Algorithm"
+    url: /Algorithm/
+
+  - title: "Design Pattern"
     url: /
