--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/Baniel"
+  github           : "Baniel"
   google_plus      :
   keybase          :
   instagram        :
