Fixed Babel and Webpack Link

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ google_ad_slot           :
 author:
   name             : "Daniel Zhang"
   avatar           : "headicon.png"
-  bio              : "I am still learning..."
+  bio              : "Talk is bullshit,show me your code!!!"
   location         : "Melbourne"
   email            : "danielpark139@gmail.com"
   uri              : "http://danieltech.net/"
