--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", custom"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+    server               : https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963
   facebook:
     # https://developers.facebook.com/docs/plugins/comments
     appid                :
