--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "Daniel Tech Blog"
 title_separator          : "-"
 name                     : "Daniel Zhang"
-description              : "I Love Python"
+description              : "Think Differentx"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
