--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
   avatar           : "headicon.png"
   bio              : "Talk is bullshit,show me your code!!!"
   location         : "Melbourne"
-  email            : "danielpark139@gmail.com"
+  email            : "danielzhangdeveloper@gmail.com"
   uri              : "http://danieltech.net/"
   bitbucket        :
   codepen          :
