--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ google_ad_slot           :
 author:
   name             : "Daniel Zhang"
   avatar           : "headicon.png"
-  bio              : "Talk is cheap,show me your code!!!"
+  bio              : "Talk is very important, and show me your code!!!"
   location         : "Melbourne"
   email            : "danielzhangdeveloper@gmail.com"
   uri              : "http://danieltech.net/"
