Add security part

--- a/_config.yml
+++ b/_config.yml
@@ -108,11 +108,11 @@ author:
   avatar           : "/assets/images/headicon.png"
   bio              : "I am an Software Engineer."
   location         : "Live in Melbourne"
-  email            : "danielzhangdeveloper@gmail.com"
+  # email            : "danielzhangdeveloper@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+      url: mailto:danielzhangdeveloper@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       #url: "https://twitter.com/danielpark_J"
