--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ comments:
   facebook:
     # https://developers.facebook.com/docs/plugins/comments
     appid                :
-    num_posts            : # 5 (default)
+    num_posts            : 6 # 5 (default)
     colorscheme          : # "light" (default), "dark"
   utterances:
     theme                : minimal-mistakes-jekyll # "github-light" (default), "github-dark"
