--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,9 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About Me"
   #   url: /about/
+
+  - title: "BlockChain"
+    url: /blockchain/
   - title: "Algorithm"
     url: /algorithm/
   - title: "System Design"
