--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:danielzhangdeveloper@gmail.com
+      url: mailto:danielzhangcoin@outlook.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       #url: "https://twitter.com/danielpark_J"
