--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,5 +13,5 @@ main:
     url: /mathematics/
   - title: "Security"
     url: /security/
-  - title: "About Me"
-    url: /aboutme/
+  - title: "About me"
+    url: /about/
