--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,13 +5,13 @@ main:
   # - title: "About Me"
   #   url: /about/
 
-  - title: "BlockChain"
-    url: /blockchain/
+  - title: "Machine Learning"
+    url: /machinelearning/
+  - title: "Deep Learng"
+    url: /deeplearning/
   - title: "Algorithm"
     url: /algorithm/
   - title: "Mathematics"
     url: /mathematics/
-  - title: "Security"
-    url: /security/
   - title: "About me"
     url: /about/
